# BackendSnaps

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  settings.py  settings_base.py  settings_dev.py  settings_prod.py  setup_and_run  urls.py  wsgi.py
backendsnaps/: admin.py  apps.py  models.py  serializers.py  tests.py  views.py
backendsnaps/migrations/: 0001_initial.py  0002_drinkevent_event.py  0003_event_name.py  0004_auto_20190406_0821.py  0005_auto_20190406_2141.py  0006_create_test_users.py
backendsnaps/templates/: chart.html
