[tool.poetry]
name = "backendsnaps"
version = "0.1.0"
description = ""
authors = ["Asger Hautop Drewsen <asgerdrewsen@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
djangorestframework = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
